--- a/responsive.css
+++ b/responsive.css
@@ -64,3 +64,189 @@ body {
     font-weight: bolder;
 
 }
+
+#navbar button:active {
+
+    background-color: #434c13;
+    color: yellow;
+
+}
+
+#text {
+
+    color: green;
+    font-family: impact;
+    margin: auto;
+    text-align: center;
+    font-size: 25px;
+    width: 70%;
+
+}
+
+#huis {
+
+    width: 90%;
+    margin: 0 5% 5% 5%;
+
+}
+
+#baby {
+
+    width: 45%;
+    margin: 0 5% 5% 5%;
+
+}
+
+#keyboard {
+
+    display: none;
+    width: 90%;
+    margin: 0 5% 5% 5%;
+
+}
+
+#papier {
+
+    width: 40%;
+    margin: 0 5% 5% 0;
+    float: right;
+
+}
+
+#patat {
+
+    display: none;
+    width: 20%;
+    height: 10vh;
+    float: left;
+    background-color: yellow;
+
+}
+
+#auto {
+
+    width: 90%;
+    margin: 0 5% 5% 5%;
+
+}
+
+#vlieg {
+
+    width: 45%;
+    margin: 0 5% 5% 5%;
+
+}
+
+#konijn {
+
+    display: none;
+
+}
+
+#mouse {
+
+    float: right;
+    width: 40%;
+    margin: 0 5% 0 0;
+
+}
+
+@media (min-width:426px) {
+
+body {
+    background-color: blue;
+}
+
+#more {
+
+    display: none;
+
+}
+
+#navbar {
+
+    top: 0vh;
+
+}
+
+#text {
+
+    width: 80%;
+    color: white;
+    font-family: arial;
+    font-size: 35px;
+
+}
+
+#patat {
+
+    display: block;
+
+}
+
+#huis {
+
+    width: 40%;
+
+}
+
+#baby {
+
+    width: 40%;
+    float: right;
+    margin: 0 5% 5% 0;
+
+}
+
+#auto {
+
+    width: 40%;
+
+}
+
+#vlieg {
+
+    width: 90%;
+
+}
+
+#mouse {
+
+    float: left;
+    margin: 0 5% 5% 5%;
+
+}
+
+#konijn {
+
+    display: block;
+    float: right;
+    width: 40%;
+    margin: 0 5% 5% 5%;
+
+}
+
+}
+
+@media (min-width:769px) {
+
+    body {
+
+        background-color: red;
+
+    }
+
+    #text {
+
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: black;
+
+    }
+
+    #keyboard {
+
+        display: block;
+
+    }
+
+}
