--- a/responsive.css
+++ b/responsive.css
@@ -97,6 +97,12 @@ body {
 
 }
 
+#appel {
+
+    display: none;
+
+}
+
 #keyboard {
 
     display: none;
@@ -166,6 +172,15 @@ body {
 #navbar {
 
     top: 0vh;
+    background-color: purple;
+
+}
+
+#navbar button {
+
+    color: white;
+    background-color: purple;
+    font-size: 15px;
 
 }
 
@@ -181,6 +196,7 @@ body {
 #patat {
 
     display: block;
+    background-color: purple;
 
 }
 
@@ -238,7 +254,7 @@ body {
 
     #text {
 
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         color: black;
 
     }
@@ -246,6 +262,37 @@ body {
     #keyboard {
 
         display: block;
+
+    }
+
+    #navbar button {
+
+        font-size: 25px;
+        background-color: orange;
+        color: green;
+
+    }
+
+    #navbar {
+
+        background-color: orange;
+        width: 80%;
+        margin: 0 auto;
+        float: inherit;
+
+    }
+
+    #patat {
+
+        display: none;
+
+    }
+
+    #appel {
+
+        display: block;
+        width: 15%;
+        margin: 0 auto;
 
     }
 
